--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>Sérieux, rigoureux et curieux, je suis à la recherche d’opportunités où je pourrai mettre mes compétences au service de projets innovants, tout en continuant à apprendre et évoluer.</p>
       </div>
       <div class="about-image">
-        <img src="assets/about_image2.png" alt="Illustration développeur web">
+        <img src="assets/about_image2.webp" alt="Illustration développeur web">
       </div>
     </div>
   </section>
@@ -38,7 +38,7 @@
   <div class ="projet_flx">
 
     <div class="project">
-  <img src="assets/01.booki.jpg" alt="1" class="project-img">
+  <img src="assets/01.booki.webp" alt="1" class="project-img">
   <h3>Projet 1 – Booki</h3>
   <p>Créez la page d'accueil d'une agence de voyage avec HTML & CSS</p>
   
@@ -61,7 +61,7 @@
 </div>
 
 <div class="project">
-  <img src="assets/02.archiwebos.jpg" alt="2" class="project-img">
+  <img src="assets/02.archiwebos.webp" alt="2" class="project-img">
   <h3>Projet 2 – ArchiWebos</h3>
   <p>Créer une page web dynamique avec JavaScript</p>
 
@@ -84,7 +84,7 @@
 </div>
 
 <div class="project">
-  <img src="assets/03.nina.jpg" alt="3" class="project-img">
+  <img src="assets/03.nina.webp" alt="3" class="project-img">
   <h3>Projet 3 – Nina Carducci</h3>
   <p>Débuggez et optimisez un site de photographe</p>
 
@@ -107,7 +107,7 @@
 </div>
 
 <div class="project">
-  <img src="assets/04.kasa.png" alt="4" class="project-img">
+  <img src="assets/04.kasa.webp" alt="4" class="project-img">
   <h3>Projet 4 – Kasa</h3>
   <p>Créez une application web de location immobilière avec React</p>
 
@@ -130,7 +130,7 @@
 </div>
 
 <div class="project">
-  <img src="assets/05.mvgr.jpg" alt="5" class="project-img">
+  <img src="assets/05.mvgr.webp" alt="5" class="project-img">
   <h3>Projet 5 – Mon Vieux Grimoire</h3>
   <p>Développez le back-end d'un site de notation de livres</p>
 
@@ -153,7 +153,7 @@
 </div>
 
 <div class="project">
-  <img src="assets/06.qwenta.jpg" alt="6" class="project-img">
+  <img src="assets/06.qwenta.webp" alt="6" class="project-img">
   <h3>Projet 6 – Qwenta</h3>
   <p>Planifiez le développement du site de votre client</p>
 
@@ -186,12 +186,12 @@
   <section id="skills">
   <h2>Compétences</h2>
   <div class="skills-grid">
-    <div class="skill-card">HTML/CSS <span>⭐⭐⭐</span></div>
-    <div class="skill-card">JavaScript <span>⭐⭐</span></div>
-    <div class="skill-card">Node.js / Express <span>⭐⭐</span></div>
-    <div class="skill-card">MongoDB <span>⭐⭐</span></div>
-    <div class="skill-card">React (bases) <span>⭐</span></div>
-    <div class="skill-card">Déploiement (Render, GitHub Pages) <span>⭐⭐</span></div>
+    <div class="skill-card">HTML/CSS <span>⭐⭐⭐⭐</span></div>
+    <div class="skill-card">JavaScript <span>⭐⭐⭐</span></div>
+    <div class="skill-card">Node.js / Express <span>⭐⭐⭐</span></div>
+    <div class="skill-card">MongoDB <span>⭐⭐⭐</span></div>
+    <div class="skill-card">React  <span>⭐⭐</span></div>
+    <div class="skill-card">Déploiement (Render, GitHub) <span>⭐⭐⭐</span></div>
   </div>
 </section>
 
