--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <div class="contact-info">
       <p><strong>Email :</strong> <a href="mailto:wajih.djedidi@gmail.com">wajih.djedidi@gmail.com</a></p>
       <p><strong>GitHub :</strong> <a href="https://github.com/Wdj39" target="_blank">github.com/Wdj39</a></p>
-      <p><strong>LinkedIn :</strong> <a href="https://linkedin.com/in/ton-profil" target="_blank">linkedin.com/in/ton-profil</a></p>
+      <p><strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/wajih-djedidi-1a8633181/" target="_blank">linkedin.com/in/MonProfile</a></p>
       <p><a href="assets/cv.wd.pdf" download>Télécharger mon CV</a></p>
     </div>
   </div>
