--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Portfolio de Wajih Djedidi, développeur web front-end et back-end. Découvrez mes projets, compétences et contactez-moi pour vos besoins en développement web." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio Wajih Djedidi</title>
+  <title>Portfolio Wajih Djedidi - Développeur Web</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -38,7 +39,7 @@
   <div class ="projet_flx">
 
     <div class="project">
-  <img src="assets/01.booki.webp" alt="1" class="project-img">
+  <img src="assets/01.booki.webp" alt="projet_1_Booki" class="project-img">
   <h3>Projet 1 – Booki</h3>
   <p>Créez la page d'accueil d'une agence de voyage avec HTML & CSS</p>
   
@@ -61,7 +62,7 @@
 </div>
 
 <div class="project">
-  <img src="assets/02.archiwebos.webp" alt="2" class="project-img">
+  <img src="assets/02.archiwebos.webp" alt="projet_2_archiwebos" class="project-img">
   <h3>Projet 2 – ArchiWebos</h3>
   <p>Créer une page web dynamique avec JavaScript</p>
 
@@ -84,7 +85,7 @@
 </div>
 
 <div class="project">
-  <img src="assets/03.nina.webp" alt="3" class="project-img">
+  <img src="assets/03.nina.webp" alt="projet_3_Nina" class="project-img">
   <h3>Projet 3 – Nina Carducci</h3>
   <p>Débuggez et optimisez un site de photographe</p>
 
@@ -107,7 +108,7 @@
 </div>
 
 <div class="project">
-  <img src="assets/04.kasa.webp" alt="4" class="project-img">
+  <img src="assets/04.kasa.webp" alt="projet_4_kasa" class="project-img">
   <h3>Projet 4 – Kasa</h3>
   <p>Créez une application web de location immobilière avec React</p>
 
@@ -130,7 +131,7 @@
 </div>
 
 <div class="project">
-  <img src="assets/05.mvgr.webp" alt="5" class="project-img">
+  <img src="assets/05.mvgr.webp" alt="projet_5_mvgr" class="project-img">
   <h3>Projet 5 – Mon Vieux Grimoire</h3>
   <p>Développez le back-end d'un site de notation de livres</p>
 
@@ -153,7 +154,7 @@
 </div>
 
 <div class="project">
-  <img src="assets/06.qwenta.webp" alt="6" class="project-img">
+  <img src="assets/06.qwenta.webp" alt="projet_6_qwenta" class="project-img">
   <h3>Projet 6 – Qwenta</h3>
   <p>Planifiez le développement du site de votre client</p>
 
